hphp/hack/test/typecheck/class_level_where_clauses/this_as/protected_non_static_member_01.php.exp
File "protected_non_static_member_01.php", line 20, characters 12-13:
No method 'me' in T (did you mean 'foo'?) (Typing[4053])
File "protected_non_static_member_01.php", line 20, characters 5-9:
This is why I think it is an object of type T
File "protected_non_static_member_01.php", line 17, characters 7-7:
Declaration of T is here
File "protected_non_static_member_01.php", line 29, characters 12-13:
No method 'me' in T2 (did you mean 'foo'?) (Typing[4053])
File "protected_non_static_member_01.php", line 29, characters 5-9:
This is why I think it is an object of type T2
File "protected_non_static_member_01.php", line 24, characters 7-8:
Declaration of T2 is here
